@@ -2,6 +2,8 @@ Release v1.3.0 on ???, 2021
 ---------------------------------------------------------
 - A whole new set of festive graphics have been added!
 - A new character, the @INCOMPLETE@, has been added!
+- Screen content now automatically resizes based on window size.
+- Fixed issues with window resizing in a strange way.
 - Fixed a crash with a certain character when in Halloween mode.
 
 
